# agent-team-orchestrator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  agent-team.config.example.jsonc  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
src/agent_team/: __init__.py  artifacts.py  blocked_summary.py  cli.py  config.py  dashboard.py  db.py  human_input_policy.py  lifecycle.py  locks.py  models.py  orchestrator.py  pull_requests.py  state_machine.py  web.py  web_errors.py  web_html.py  web_jobs.py  web_models.py  web_pages.py  web_resources.py  web_routing.py  web_security.py  worker.py  workspaces.py
src/agent_team/adapters/: __init__.py  ado.py
src/agent_team/copilot_plugin/: plugin.json
src/agent_team/copilot_plugin/agents/: agent-team-implementation.agent.md  agent-team-merge-conflict-resolution.agent.md  agent-team-plan.agent.md  agent-team-research.agent.md  agent-team-review.agent.md  agent-team-validation.agent.md
src/agent_team/prompts/: implementation.md  merge_conflict_resolution.md  plan.md  research.md  review.md  validation.md
src/agent_team/runners/: __init__.py  base.py  copilot_cli.py  dry_run.py
src/agent_team/web_static/: __init__.py  app.js  styles.css
tests/: __init__.py  test_blocked_summary.py  test_config.py  test_copilot_runner.py  test_dashboard_and_concurrency.py  test_pull_requests.py  test_state_machine.py  test_store_and_worker.py  test_web.py  test_workspaces.py
